--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,58 @@
+<!--
+    ──────▄▌▐▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▌
+  ───▄▄██▌█ BEEP BEEP
+  ▄▄▄▌▐██▌█ -15 LP DELIVERY
+  ███████▌█▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▌
+  ▀(⊙)▀▀▀▀▀▀▀(⊙)(⊙)▀▀▀▀▀▀▀▀▀▀(⊙
+
+  No se q haces acá pero la curiosidad mató al gato.
+  Si quieres más info acerca del proyecto a nivel técnico échale un ojo al 
+  repositorio que tengo en github.
+  Por encimita, está hecho en React y Typescript, con TailwindCSS, SASS, Framer Motion y Styled Components.
+
+  https://github.com/raymknd/feria-cientifica
+
+  - Raimundo Navarrete a.k.a raymknd 💃
+  @weshouldmeethoney en ig
+ -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-CL">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/static/images/5969572.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#ff0000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Estudio del ciclo celular, una investigación de Raimundo Navarrete, Josefa Palma, Valentina González y Santiago Gómez."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <title>Feria Científica</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <noscript>
+      <div
+        style="
+          height: 100vh;
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          text-align: center;
+          gap: 15px;
+          padding: 15px;
+        "
+      >
+        <div>
+          <div>🤨</div>
+          <h1>
+            Necesitas tener activado JavaScript para correr esta aplicación
+          </h1>
+          <small style="opacity: 0.5"
+            >¿Tienes desactivado JavaScript en pleno 2022?</small
+          >
+        </div>
+      </div>
+    </noscript>
+    <div id="react-app"></div>
   </body>
 </html>
