--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,20 @@
       name="description"
       content="Estudio del ciclo celular, una investigación de Raimundo Navarrete, Josefa Palma, Valentina González y Santiago Gómez."
     />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-PQ7ZQ7Q467"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-PQ7ZQ7Q467");
+    </script>
     <title>Feria Científica</title>
   </head>
   <body>
